# vue_actix_template

./: .env.docker  .env.save  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  diesel.toml  docker-compose.yml
migrations/2023-02-10-212701_todos/: up.sql
nginx/: default.conf.template
src/: container.rs  create_app.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/controllers/: hello_world_controller.rs  hello_world_handler.rs  mod.rs  todo_controller.rs
src/api/dto/: hello_world.rs
src/data_access/: error.rs  mod.rs  schema.rs
src/data_access/databases/: mod.rs  postgresql.rs  sqlite.rs
src/data_access/diesel_models/: todo.rs
src/data_access/models/: todo.rs
src/data_access/repositories/: todo.rs
src/domain/: mod.rs
src/domain/dto/: todo.rs
src/domain/repositories/: mod.rs  repository.rs  todo.rs
src/middleware/: get_user_id.rs  mod.rs
vue-project/: .env.development  .env.production  .eslintrc  .eslintrc.cjs  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
vue-project/src/: App.vue
vue-project/src/components/: HelloWorld.vue  NavBar.vue  todoItemComponent.vue
vue-project/src/dtos/: todo.ts
vue-project/src/router/: index.ts
vue-project/src/stores/: todo.ts
vue-project/src/views/: HomeView.vue  NotFound.vue  TodoView.vue
