[package]
name = "vue_actix_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# For has issues building on mac os need below
# https://stackoverflow.com/a/75111674
[dependencies]
actix-files = "0.6"
actix-web = "4"
actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.58"
dotenv = { version = "0.15" }
diesel = { version = "2.0.0", features = ["sqlite", "postgres", "r2d2", "chrono", "serde_json"] }

diesel_migrations = "2.0.0"
