[package]
name = "vue_actix_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# For has issues building on mac os need below
# https://stackoverflow.com/a/75111674
[dependencies]
actix-files = "0.6"
actix-web = "4"
actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.58"
dotenv = { version = "0.15" }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
env_logger = "0.10.0"
diesel-async = { version = "0.2.0", features = ["postgres", "bb8"] }
diesel_migrations = "2.0.0"
bb8 = "0.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
futures-util = "0.3.26"
uuid = { version = "1.3.0", features = [ "v4", "fast-rng", "serde"] }
actix-cors = "0.6.4"